admin dashboard- inventory section added